import "GroupEnumerationPointer.proto";

option java_outer_classname="GetGroupNextChunkCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetGroupNextChunkCommand {
	optional int64 requestId = 1;
	optional GroupEnumerationPointer groupEnumerationPointer = 2;
}